# wigner_kernels

./: .gitignore  LE_maths.py  README.md  Wigner_basic.ipynb  adding_thresholding.ipynb  benchmarking_clean_minimalistic_cosmopc25_5_5.ipynb  benchmarking_clean_minimalistic_cosmopc25_5_5_current_version.ipynb  benchmarking_clean_minimalistic_cosmopc25_5_5_m_first.ipynb  code_pytorch.py  dataset_processing.py  debug.py  dipoles.json  dipoles.out  dipoles_large.py  dipoles_large.sh  error_measures.py  forces.npy  fortran.f  gold.json  gold.out  grid.py  invariants_torch_impl.ipynb  jacobian_demonstration.ipynb  large.py  methane.json  methane.out  methane_nn_from_ps.ipynb  methane_nn_from_spherical_expansion.ipynb  nice_comparison_c_centered.ipynb  nice_comparison_multicentered.ipynb  numerical_SPH_derivatives.ipynb  prediction_forces.npy  pytorch_guide.ipynb  qm9.json  qm9.out  requirements.txt  run_wk.py  run_wk_adaptive.py  run_wk_dipoles.py  run_wk_exponential.py  (+7 more)
code/: code_pytorch.py  nice_blocks.py  test_utilities.py  utilities.py
examples/: benchmark_skm.ipynb  benchmark_skm_rascal_only_energies.ipynb  invariants_calculation.ipynb  librascal_skm.ipynb  sparse_kernel_model.ipynb  sparse_kernel_model_dict.pt  sparse_kernel_model_list.pt
examples/cpp_invoke/: CMakeLists.txt
meeting/: 0.pytorch_guide.ipynb  1.sandbox.ipynb  2.invariants_calculation.ipynb  3. benchmarking_invariants_torch.float32.ipynb  3. benchmarking_invariants_torch.float64.ipynb  4. sparse_kernel_model.ipynb  5.benchmark_big_skm_torch.float32.ipynb  5.benchmark_big_skm_torch.float64.ipynb  (+7 more)
(+69 files in other folders)
